[package]
name = "advanced-experiments"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2015"

[dependencies]

failure = "0.1.5"
quick-error = "1.2.2"

[features]
default = ["rust-2015"]
rust-2015 = []

[[bin]]
name = "main-result"
path = "../src/bin/main-result.rs"

[[bin]]
name = "main-result-better"
path = "../src/bin/main-result-better.rs"

[[bin]]
name = "option"
path = "../src/bin/option.rs"

[[bin]]
name = "paths"
path = "../src/bin/paths.rs"
